# Command-Control-Simulation

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build.bat  build.sh  demo.sh  performance_test.sh
docs/: ARCHITECTURE.md
src/core/: logger.cpp  logger.h  observer.cpp  observer.h  registry.cpp  registry.h  strategy.cpp  strategy.h
src/domain/: command.cpp  command.h  telemetry.cpp  telemetry.h  unit.cpp  unit.h
src/net/: protocol_handler.cpp  protocol_handler.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
tests/: test_agent.cpp  test_controller.cpp  test_domain.cpp  test_observer.cpp  test_strategy.cpp
